MINOR: Distribute batch combining among read and write state.